@@ -1,0 +1,44 @@
+// Copyright (C) 2020 Free Software Foundation, Inc.
+//
+// This file is part of the GNU ISO C++ Library.  This library is free
+// software; you can redistribute it and/or modify it under the
+// terms of the GNU General Public License as published by the
+// Free Software Foundation; either version 3, or (at your option)
+// any later version.
+
+// This library is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+
+// You should have received a copy of the GNU General Public License along
+// with this library; see the file COPYING3.  If not see
+// <http://www.gnu.org/licenses/>.
+
+// { dg-options "-std=gnu++2a" }
+// { dg-do compile { target c++2a } }
+
+#include <compare>
+
+void
+test01()
+{
+  // PR libstdc++/93479
+  int i[1];
+  int j[1];
+  std::compare_three_way{}(i, j); // { dg-error "no match" }
+}
+
+void
+test02()
+{
+  struct X
+  {
+    operator const char*() const noexcept { return "!"; }
+    void operator<=>(X) const = delete;
+    void operator<=>(const void*) const = delete;
+  } x;
+  std::compare_three_way{}(x, x); // { dg-error "no match" }
+  std::compare_three_way{}(x, ""); // { dg-error "no match" }
+  std::compare_three_way{}("", x); // { dg-error "no match" }
+}
